# BCDirectComputeVk

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  dxc_compile.bat  dxc_compile.sh  install_dxc.sh  install_vulkan_mac.sh
.github/workflows/: test.yml
example/: R8G8B8A8_UNORM_512x512.dds  main.cpp
include/: BCDirectComputeVk.h  VulkanDeviceManager.h
src/: BC6HEncode.hlsl  BC7Encode.hlsl  BCDirectComputeVk.cpp  VulkanDeviceManager.cpp
